--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <h1 style="position:absolute;left:-9999px;">Vite server is running</h1>
+    <div id="root">
+      <noscript>กรุณาเปิดใช้งาน JavaScript เพื่อแสดงผลหน้าเว็บ</noscript>
+      <div>Loading app…</div>
+    </div>
+    <script>
+      // Show a helpful message when opened via file:// without a server
+      window.__APP_MOUNTED__ = false;
+      setTimeout(function () {
+        if (!window.__APP_MOUNTED__) {
+          var r = document.getElementById('root');
+          if (r) {
+            r.innerHTML = '<div style="padding:16px;font-family:ui-sans-serif,-apple-system,Segoe UI,Roboto,Helvetica,Arial">' +
+              '<h2 style="margin:0 0 8px">ไม่สามารถโหลดแอปได้</h2>' +
+              '<p>โปรดรันผ่าน dev server: <code>npm run dev</code> หรือ build แล้ว preview: <code>npm run build && npm run preview</code>. อย่าเปิดไฟล์ index.html ตรงๆ</p>' +
+              '</div>'
+          }
+        }
+      }, 1500);
+    </script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
-</html>
+  </html>
